finished converting all primary classes to record-backed interfaces